deployments/k8s/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: envoy
spec:
        type: NodePort
        selector:
          app: envoy
        ports:
        - port: 9080
          targetPort: 10000
          nodePort: 31500
